--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   "types": "./es/index.d.ts",
   "sideEffects": false,
   "scripts": {
-    "examples:install": "npm-run-all --serial build install:*",
+    "examples:install": "npm-run-all --serial  install:*",
     "examples:start": "npm-run-all --parallel start:*",
-    "examples:start-multiple": "run-p start-main-multiple start:react15 start:vue",
+    "examples:start-multiple": "run-p start-main-multiple start:react16 start:vue3",
     "install:main": "cd examples/main && yarn",
     "start:main": "cd examples/main && yarn start",
     "start-main-multiple": "cd examples/main && yarn start:multiple",
