--- a/examples/umiApp/package.json
+++ b/examples/umiApp/package.json
@@ -8,9 +8,7 @@
     "test": "umi-test",
     "test:coverage": "umi-test --coverage"
   },
-  "gitHooks": {
-
-  },
+  "gitHooks": {},
   "lint-staged": {
     "*.{js,jsx,less,md,json}": [
       "prettier --write"
@@ -23,6 +21,7 @@
     "@ant-design/pro-form": "^1.55.0",
     "@ant-design/pro-layout": "^6.5.0",
     "@ant-design/pro-table": "^2.64.1",
+    "csijs": "^1.0.10",
     "react": "17.x",
     "react-dom": "17.x",
     "umi": "^3.5.20"
